feat: :sparkles: Update authentication styles and improve form accessibility

--- a/auth/login.html
+++ b/auth/login.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SocialSpot - Login</title>
     <link rel="stylesheet" href="../css/auth.css">
 </head>
@@ -12,8 +12,8 @@
 <div class="form-container">
     <p class="title">Welcome back</p>
     <form class="form">
-      <input type="email" class="input" placeholder="Email">
-      <input type="password" class="input" placeholder="Password">
+      <input type="email" class="input" placeholder="Email" inputmode="email">
+      <input type="password" class="input" placeholder="Password" autocomplete="current-password">
       <p class="page-link">
         <span class="page-link-label">Forgot Password?</span>
       </p>
