--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -11,19 +10,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="decorative-wave"></div>
-    <div class="decorative-circle"></div>
-    <div class="decorative-circle"></div>
-    
     <div class="container landing-page">
         <div class="logo-animation">
             <div class="logo"></div>
             <h1 class="title-animation">SocialSpot</h1>
+            <p class="slogan">Encuentra los lugares de tu agrado con un simple click</p>
         </div>
         
         <div class="nav-links">
-            <a href="auth/login.html" class="btn btn-primary link-animation">Iniciar Sesión</a>
-            <a href="auth/register.html" class="btn btn-secondary link-animation">Registrarse</a>
+            <a href="auth/login.html" class="btn btn-primary link-animation">Ingresar</a>
         </div>
     </div>
 </body>
